@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-07-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/blob.c (DestroyBlob, DestroyBlobInfo): Implementation is
+        a bit more robust.
+
+</UL>
+<p>
 2008-07-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
