@@ -1,3 +1,8 @@
+2008-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/blob.c (DestroyBlob, DestroyBlobInfo): Implementation is
+	a bit more robust.
+
 2008-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/jpeg.c (ReadJPEGImage): Remove over-write of
